fixed overflow issue from AOS library

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,6 @@ body {
     font-weight: 300;
     font-size: 1.75rem;
     color: #FFF;
-    overflow-x: hidden;
 } 
 
 body.open {
@@ -282,7 +281,7 @@ section {
 }
 
 .portfolio-item ul {
-    margin-top: 3vw;
+    margin-bottom: 3vw;
 }
 
 /* Experience */
